--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongoose": "^5.0.0",
     "morgan": "^1.9.0",
     "random-number": "0.0.9",
     "socket.io": "^2.0.4",
