--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic chat application",
   "main": "app.js",
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chanpreet Singh Chhabra",
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "mongoose": "^5.0.0",
     "morgan": "^1.9.0",
+    "nodemon": "^1.14.11",
     "random-number": "0.0.9",
     "socket.io": "^2.0.4",
     "twilio": "^3.11.0"
