--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "Chanpreet Singh Chhabra",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "mongoose": "^5.0.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.11",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "random-number": "0.0.9",
     "socket.io": "^2.0.4",
     "twilio": "^3.11.0"
